<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_5"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginHorizontal="@dimen/dp_30"
            android:id="@+id/btn_close"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/colorAccent"
            android:text="@string/close"
            android:textColor="@android:color/white" />
        <Button
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_weight="1"
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
